--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<!-- Mudar mais tarde -->
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
